--- a/src/main/frontend/src/app/products/product-list/product-list.component.html
+++ b/src/main/frontend/src/app/products/product-list/product-list.component.html
@@ -1,2 +1,6 @@
-<div class="container">
-  <details-upload></details-upload>
+<div class="container"> 
+  <div class="text-center"> 
+    <app-pager [numberOfPages]=5></app-pager>
+    <details-upload></details-upload>
+  </div>
+</div>
