--- a/src/main/frontend/src/app/products/product-list/product-list.component.html
+++ b/src/main/frontend/src/app/products/product-list/product-list.component.html
@@ -1,6 +1,5 @@
-<div class="container"> 
+<div class="container bg"> 
   <div class="text-center"> 
-    <app-pager [numberOfPages]=5></app-pager>
     <ul class="pagination justify-content-center">
       <li>
         <a aria-label="Previous">
@@ -15,7 +14,7 @@
       </li>
     </ul>
     <div *ngFor="let product of products.content">
-      <details-upload productTemplate={{product}}></details-upload>
+      <details-upload productTemplate={{product.name}}></details-upload>
     </div>
   </div>
 </div>
