--- a/src/main/frontend/src/app/products/uploads-list/list-upload.component.html
+++ b/src/main/frontend/src/app/products/uploads-list/list-upload.component.html
@@ -9,7 +9,7 @@
     <div class="panel-heading">List of Images</div>
     <div *ngFor="let file of fileUploads | async">
       <div class="panel-body">
-        <details-upload [fileUpload]='file'></details-upload>
+        <!-- <details-upload [fileUpload]='file'></details-upload> -->
       </div>
     </div>
   </div>
