--- a/src/main/frontend/src/app/navbar/navbar.component.html
+++ b/src/main/frontend/src/app/navbar/navbar.component.html
@@ -1,22 +1,13 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button"
-              class="navbar-toggle collapsed"
-              (click)="toggleState()">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" routerLink="/">SHOP</a>
-    </div>
-    <div class="collapse navbar-collapse"
-         [ngClass]="{ 'in': isCollapsed }">
-      <ul class="nav navbar-nav">
-        <li><a routerLink="/products">Products</a></li>
-        <li><a routerLink="/cart">Cart</a></li>
-      </ul>
-    </div>
+<nav class="navbar navbar-expand-md navbar-dark bg-black fixed-top">
+  <a class="navbar-brand" href="#">Angular</a>
+  <button class="navbar-toggler hidden-sm-up" type="button" (click)="toggleState()" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div [ngbCollapse]="isCollapsed" class="collapse navbar-collapse" id="navbarsDefault">
+    <ul class="navbar-nav mr-auto">
+      <li><a class = "navbar-option" routerLink="/products">Products</a></li>
+      <li><a class = "navbar-option" routerLink="/cart">Cart</a></li>
+    </ul>
   </div>
 </nav>
+
