--- a/src/main/frontend/src/app/products/details-upload/details-upload.component.html
+++ b/src/main/frontend/src/app/products/details-upload/details-upload.component.html
@@ -1,14 +1,34 @@
+<!--<div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">-->
+<!--<div class="card h-100">-->
+<!--<a href="#"><img class="card-img-top" [src]="productTemplate.imageURL" alt=""></a>-->
+<!--<div class="card-body">-->
+<!--<h4 class="card-title">-->
+<!--<a href="#">{{productTemplate.name}}</a>-->
+<!--</h4>-->
+<!--<p>code: {{productTemplate.code}}</p>-->
+<!--<p>price: {{productTemplate.price}}</p>-->
+<!--<p>{{productTemplate.imageUrl}}</p>-->
+<!--<p class="card-text">{{productTemplate.description}}</p>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" [src]="productTemplate.imageURL" alt=""></a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">{{productTemplate.name}}</a>
-            </h4>
-            <p>code: {{productTemplate.code}}</p>
-            <p>price: {{productTemplate.price}}</p>
-            <p>{{productTemplate.imageUrl}}</p>
-            <p class="card-text">{{productTemplate.description}}</p>
-          </div>
-        </div>
+  <mat-card class="card">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>{{productTemplate.name}}</mat-card-title>
+      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+    </mat-card-header>
+    <img class="card-img" mat-card-image src="{{productTemplate.imageURL}}" alt="Image of product">
+    <mat-card-content>
+      <p>
+        {{productTemplate.description}}
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>LIKE</button>
+      <button mat-button>SHARE</button>
+    </mat-card-actions>
+    `
+  </mat-card>
 </div>
