--- a/src/main/frontend/src/app/products/product-list/product-list.component.html
+++ b/src/main/frontend/src/app/products/product-list/product-list.component.html
@@ -1,20 +1,24 @@
-<div class="container bg"> 
-  <div class="text-center"> 
+<div class="container bg">
+  <div class="row">
+    <details-upload *ngFor="let product of products.content" [productTemplate]="product"></details-upload>
+  </div>
+
+  <div class="text-center">
     <ul class="pagination justify-content-center">
-      <li>
-        <a aria-label="Previous">
+      <li [ngClass]="{disabled:currentPage === 1}" class="page-item">
+        <a aria-label="Previous" (click)="goToPage(currentPage - 1)" class="page-link">
           <span aria-hidden="true">&laquo;</span>
         </a>
       </li>
-      <li *ngFor= "let page of getPages()" [ngClass]="{active:currentPage === page}"><a (click)="goToPage(page)">{{page}}</a></li>
-      <li>
-        <a aria-label="Next">
+      <li class="page-item" *ngFor="let page of getPages()" [ngClass]="{active:currentPage === page}"><a
+        class="page-link"
+        (click)="goToPage(page)">{{page}}</a></li>
+      <li [ngClass]="{disabled:currentPage === getPages().length}" class="page-item">
+        <a class="page-link" (click)="goToPage(currentPage + 1)" aria-label="Next">
           <span aria-hidden="true">&raquo;</span>
         </a>
       </li>
     </ul>
-    <div class = "row">
-      <details-upload *ngFor="let product of products.content" [productTemplate]="product"></details-upload>
-    </div>
   </div>
+
 </div>
